<resources>
    <string name="app_name">NO_BRAINER_Group_10</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="login_screen">Login Screen</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="python_questions">Python Questions</string>
    <string name="java_questions">Java Questions</string>
    <string name="maths_questions">Maths Questions</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="question">Question</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="answer_two">Answer Two</string>
    <string name="answer_one">Answer One</string>
    <string name="update_question">Update Question</string>
    <string name="add_question">Add Question</string>
    <string name="questions">Questions</string>
    <string name="submit">Submit</string>
    <string name="Select">Select</string>
    <string name="Selected">Selected</string>
    <string name="back">back</string>
    <string name="describe">describe</string>
    <string name="example">Example</string>
</resources>
